# telemetry-simulator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: SOCKET_API.md
docs/plans/: 2025-04-30-event-driven-design.md  duration-based-execution.md  event-driven-implementation.md  multiprocess-simulation.md
src/: config.rs  delivery.rs  generator.rs  lib.rs  main.rs  message.rs  writer.rs
tests/: integration_test.rs  test.sh  test_outputs.py
tests/common/: mod.rs
