[package]
name = "telemetry-simulator"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
stdout = []

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "io-std", "signal"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
assert_matches = "1"
